--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Practica 5 semana 4 Launch x",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/.bin/jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/pe-ca/CodeChallenge/issues"
   },
-  "homepage": "https://github.com/pe-ca/CodeChallenge#readme"
+  "homepage": "https://github.com/pe-ca/CodeChallenge#readme",
+  "devDependencies": {
+    "jest": "^28.1.0"
+  }
 }
